{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 44,
  "lineage": "9ee8c8fa-3602-3c47-812e-f2e16ea66206",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eeff8d466f3c9d3b",
            "association_id": "eipassoc-0b18228bb544a1a0b",
            "domain": "vpc",
            "id": "eipalloc-0eeff8d466f3c9d3b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0cb3f0bfad1257842",
            "private_dns": "ip-10-0-0-112.eu-central-1.compute.internal",
            "private_ip": "10.0.0.112",
            "public_dns": "ec2-3-75-68-86.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.68.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-eip"
            },
            "tags_all": {
              "Name": "tf-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tf-gateway",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780356874729:internet-gateway/igw-044ed45adefbccfef",
            "id": "igw-044ed45adefbccfef",
            "owner_id": "780356874729",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0310e1986f79629b3"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eeff8d466f3c9d3b",
            "connectivity_type": "public",
            "id": "nat-04c501cd97e913dd6",
            "network_interface_id": "eni-0cb3f0bfad1257842",
            "private_ip": "10.0.0.112",
            "public_ip": "3.75.68.86",
            "subnet_id": "subnet-04506d51aae2eec31",
            "tags": {
              "Name": "tf-nat"
            },
            "tags_all": {
              "Name": "tf-nat"
            }
          },
          "dependencies": [
            "aws_eip.tf-eip",
            "aws_internet_gateway.tf-gateway",
            "aws_subnet.subnet-public",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780356874729:route-table/rtb-0db9603e22f72f8d1",
            "id": "rtb-0db9603e22f72f8d1",
            "owner_id": "780356874729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c501cd97e913dd6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt-private"
            },
            "tags_all": {
              "Name": "tf-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310e1986f79629b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tf-eip",
            "aws_internet_gateway.tf-gateway",
            "aws_nat_gateway.tf-nat-gateway",
            "aws_subnet.subnet-public",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780356874729:route-table/rtb-06d38c596b3d52b18",
            "id": "rtb-06d38c596b3d52b18",
            "owner_id": "780356874729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044ed45adefbccfef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0310e1986f79629b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-gateway",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a2aa73619c76374",
            "route_table_id": "rtb-0db9603e22f72f8d1",
            "subnet_id": "subnet-061e7108fc861e0db"
          },
          "dependencies": [
            "aws_eip.tf-eip",
            "aws_internet_gateway.tf-gateway",
            "aws_nat_gateway.tf-nat-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.subnet-private",
            "aws_subnet.subnet-public",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab5630960063ed49",
            "route_table_id": "rtb-06d38c596b3d52b18",
            "subnet_id": "subnet-04506d51aae2eec31"
          },
          "dependencies": [
            "aws_internet_gateway.tf-gateway",
            "aws_route_table.public-rt",
            "aws_subnet.subnet-public",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780356874729:subnet/subnet-061e7108fc861e0db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061e7108fc861e0db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780356874729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-subnet-private"
            },
            "tags_all": {
              "Name": "tf-subnet-private"
            },
            "vpc_id": "vpc-0310e1986f79629b3"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780356874729:subnet/subnet-04506d51aae2eec31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04506d51aae2eec31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780356874729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-subnet-public"
            },
            "tags_all": {
              "Name": "tf-subnet-public"
            },
            "vpc_id": "vpc-0310e1986f79629b3"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:780356874729:vpc/vpc-0310e1986f79629b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/25",
            "default_network_acl_id": "acl-0022f1c885ee8cd82",
            "default_route_table_id": "rtb-068d746490acf3fe8",
            "default_security_group_id": "sg-0dd44ca6d34cc20ec",
            "dhcp_options_id": "dopt-08e1fc46889dde497",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0310e1986f79629b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068d746490acf3fe8",
            "owner_id": "780356874729",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}